<resources>
    <string name="app_name">MaraeMaps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_id">7712746dad954cb</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="iwi_label">Iwi: </string>
    <string name="location_label">"Location: </string>
    <string name="address_label">Address: </string>
    <string name="hapu_label">Hapu: </string>
    <string name="wharenui_label">Wharenui: </string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="detail_not_found_label">unavailable</string>
    <string name="about_us_title">About us</string>
    <string name="about_us">
        This app was made by a group of software engineering students from the University of Otago.
    </string>

    <string name="credits_title">Credits</string>
    <string name="credits">
        <![CDATA[Our marae information was borrowed from Te Puni Kōkiri.  You can find the original dataset <a href="https://www.arcgis.com/home/item.html?id=3b9e52a2012a4e4cb434e07ce19b36dd">here</a>]]>
    </string>

    <string name="street_view">Street View</string>
    <string name="location">Location</string>

    <!-- Language headers/settings, default of English -->
    <string name="language_header">Language</string>
    <string name="key_language">key_language</string>
    <string name="lang_summary">Change language of the app</string>
    <string name="default_language">en</string>

    <string name="street_view_not_found">Street View for this Marae could not be found!</string>

    <string name="marae_search">Marae Search"</string>

    <string name="language_summary">ADD MAORI Current Language is: %1$s</string>

    <string name="font_size_header">Font Size</string>
    <string name="key_font_size">key_font_size</string>
    <string name="font">FONT</string>
    <string name="default_font_size">Default Font Size</string>
    <string name="font_size_summary">ADD MAORI Font size is: %1$s</string>

    <string name="marae_map">Marae Map</string>

</resources>